Add keywords to package.json

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "bugs": "TxHawks/jigsass-objects-grid/issues"
   },
   "keywords": [
+    "grid system",
+    "flexbox",
     "jigsass",
     "sass",
     "scss",
